[android] Add support for saving image attachments on API < 19
This is done by using the WRITE_EXTERNAL_STORAGE permission
to write the file directly without using the system activity.

--- a/briar-android/src/main/res/values/strings.xml
+++ b/briar-android/src/main/res/values/strings.xml
@@ -142,6 +142,7 @@
 	<string name="save_image">Save image</string>
 	<string name="dialog_title_save_image">Save Image?</string>
 	<string name="dialog_message_save_image">Saving this image will allow other apps to access it.\n\nAre you sure you want to save?</string>
+	<string name="save_image_success">Image was saved</string>
 	<string name="save_image_error">Could not save image</string>
 
 	<!-- Adding Contacts -->
